# ansible

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  tags.html
.github/workflows/: deploy_docs.yml
_poetry_bak/: pyproject.toml
ansible/: ansible.cfg
ansible-scripts/: run_auto_update.sh
ansible/inventories/homelab/: inventory.example.yml
ansible/plays/: base-setup.yml  install-default-packages.yml  install-docker_and_compose.yml  update-system.yml
ansible/plays/conf/: configure-dotfiles.yml  configure-firewall.yml  configure-git.yml  configure-neovim.yml  configure-tmux.yml  configure-zswap.yml  remove-snaps.yml
ansible/plays/configure/: configure-ansible_svc-user.yml  configure-dotfiles.yml  configure-firewall.yml  configure-git.yml  configure-neovim.yml  configure-pypirc.yml  configure-scheduled-clear-bash-history.yml  configure-tmux.yml  configure-zswap.yml  generate-ssh-keys.yml  remove-snaps.yml
ansible/plays/debug_info/: debug-arch.yml
ansible/plays/fixes/: fix-ssh-dir-owner.yml
ansible/plays/installs/: install-clamav.yml  install-cni-plugins.yml  install-cockpit.yml  install-default-packages.yml  install-docker_and_compose.yml  install-duplicati.yml  install-firewall.yml  install-neovim.yml  install-nodejs.yml  install-pipx.yml  install-proxmox-qemu-agent.yml  install-pyenv.yml  install-ssh.yml  install-tailscale.yml  install-tmux.yml  install-xrdp.yml
ansible/plays/maint/: clear-bash-history.yml  clear-logfiles.yml  reboot-system.yml  update-system.yml
ansible/plays/uninstalls/: uninstall-all-hashi-apps.yml  uninstall-consul.yml  (+2 more)
conda_envs/: conda_ansible.yml
docs/: index.md
docs/playbooks/: index.md
docs/roles/: index.md
docs/setup/: index.md
playbooks/: index.html
requirements/: requirements.dev.txt  requirements.txt
roles/: index.html
search/: search_index.json
setup/: index.html
(+137 files in other folders)
