
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "redjax", email = "no@no.com"},
]
dependencies = [
    "ansible-core>=2.15.2",
    "yamllint>=1.32.0",
    "ansible-runner>=2.3.3",
    "ansible-doctor>=2.1.1",
    "ara>=1.6.1",
    "mitogen>=0.3.4",
    "mkdocs>=1.5.3",
    "pygments>=2.17.2",
    "mkdocs-material>=9.5.10",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-section-index>=0.3.8",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-glightbox>=0.3.7",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]

auto-update = { shell = "cd ansible && pdm run ansible-playbook -i inventories/homelab/inventory.yml --limit autoReboot plays/maint/update-system.yml" }

[tool.pdm.dev-dependencies]
dev = [
    "nox>=2023.4.22",
    "black>=24.2.0",
]
