[tool.poetry]
name = "ansible"
version = "0.1.0"
description = "Poetry environment for Ansible"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ara = "^1.6.1"
ansible-navigator = "^2.2.0"
ansible-runner = "^2.3.1"
ansible-doctor = "^1.4.8"
yamllint = "^1.28.0"
ansible-core = "^2.14.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
